--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 									<a href="./index.html" aria-haspopup="true">Home</a>
 								</li>
 								<li class="active">
-									<a href="./about.html" aria-haspopup="true">About Us</a>
+									<a href="#" aria-haspopup="true">About Us</a>
 								</li>
 								<li class="nav__dropdown">
 									<a href="#" aria-haspopup="true">Services</a>
@@ -81,7 +81,7 @@
 									</ul>
 								</li>
 								<li>
-									<a href="#" aria-haspopup="true">Contact Us</a>
+									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
 								</li>
 							</ul> <!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
