--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 	<main class="main-wrapper main-wrapper--offset">
 
+		
 		<!-- Navigation -->
 		<header class="nav nav--side nav--side-sticky-left">
 			<div class="nav__holder">
@@ -159,7 +160,7 @@
 							data-easeout="default" data-slotamount="1" data-masterspeed="1200" data-delay="8000"
 							data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home-3/1.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
+							<img src="img/revolution/home/1.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
@@ -223,7 +224,7 @@
 						<li data-transition="scaledownfrombottom" data-easein="default" data-easeout="default"
 							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home-3/2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
+							<img src="img/revolution/home/2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
@@ -287,7 +288,7 @@
 						<li data-transition="scaledownfrombottom" data-easein="default" data-easeout="default"
 							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home-3/3.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
+							<img src="img/revolution/home/3.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
