--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
 			<section class="section-wrap pt-0 pb-0">
 				<div class="container">
 					<div class="row">
-						<div class="col-xl-4 col-lg-6">
+						<div class="col-xl-6 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
 									<img src="img/services/v-2/1.jpg" class="service-1__img" alt="">
@@ -190,7 +190,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4 col-lg-6">
+						<div class="col-xl-6 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
 									<img src="img/services/v-2/2.jpg" class="service-1__img" alt="">
@@ -214,7 +214,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4 col-lg-6">
+						<!-- <div class="col-xl-4 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
 									<img src="img/services/v-2/3.jpg" class="service-1__img" alt="">
@@ -237,7 +237,7 @@
 									</ul>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section> <!-- end services -->
