--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	<main class="main-wrapper main-wrapper--offset">
 
-		
+
 		<!-- Navigation -->
 		<header class="nav nav--side nav--side-sticky-left">
 			<div class="nav__holder">
@@ -631,7 +631,13 @@
 
 						<div class="col-lg-7 offset-lg-1">
 							<!-- Google Map -->
-							<div id="google-map" class="gmap" data-address="V Tytana St, Manila, Philippines"></div>
+							<div id="google-map" class="gmap" data-address="Karachi" style="position: relative; overflow: hidden;">
+								<iframe
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.684242195084!2d67.03733671534833!3d24.874631784047285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e5e736977c1%3A0x70ed36c8a6891d3a!2sMazar-e-Quaid%2C%20Jinnah&#39;s%20Mausoleum!5e0!3m2!1sen!2s!4v1661343394872!5m2!1sen!2s"
+									width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+									referrerpolicy="no-referrer-when-downgrade"></iframe>
+							</div>
+
 						</div>
 
 					</div>
