--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
-									<h3 class="project-1__title">Keangnam Grand Hall</h3>
+									<h3 class="project-1__title">Service 1</h3>
 									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur
 										aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
 										voluptatem sequi nesciunt.</p>
@@ -495,7 +495,7 @@
 
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
-									<h3 class="project-1__title">Green House</h3>
+									<h3 class="project-1__title">Service 2</h3>
 									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur
 										aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
 										voluptatem sequi nesciunt.</p>
