--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
 									<img src="img/services/v-2/1.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
-									<h3 class="service-1__title">Interior design</h3>
+									<h3 class="service-1__title">Service 1</h3>
 									<ul class="service-1__features">
 										<li class="service-1__feature">
 											<i class="ui-check service-1__feature-icon"></i>
@@ -196,7 +196,7 @@
 									<img src="img/services/v-2/2.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
-									<h3 class="service-1__title">Exterior design</h3>
+									<h3 class="service-1__title">Service 2</h3>
 									<ul class="service-1__features">
 										<li class="service-1__feature">
 											<i class="ui-check service-1__feature-icon"></i>
@@ -382,7 +382,8 @@
 
 					</div>
 				</div>
-			</section> <!-- end team -->
+			</section> 
+			<!-- end team -->
 
 
 			<!-- Partners -->
