--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 							<!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
 								<span class="nav__phone-text">Call us:</span>
-								<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
+								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
 							</div>
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
@@ -106,7 +106,7 @@
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
 							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
+							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
@@ -147,20 +147,21 @@
 					<div class="row">
 						<div class="col-lg-4">
 							<div class="contact">
-								<h5 class="contact__title">Melbourne Office</h5>
+								<h5 class="contact__title">Qatar Office</h5>
 								<ul class="contact__items">
 									<li class="contact__item">
 										<span class="contact__item-label">Address:</span>
-										<address>Melbourne's GPO 350 Bourke St.<br>Melbourne VIC 3000, Australia
+										<address>Retaj Building, Building no. 56, street no. 342, Zone no. 22, Bin
+											Mahmoud, Doha, Qatar.
 										</address>
 									</li>
 									<li class="contact__item">
 										<span class="contact__item-label">Phone: </span>
-										<a href="tel:+1-800-1554-456-123">+ 1 (800) 155 4561</a>
+										<a href="tel:+974-7710-3671">+974 7710 3671</a>
 									</li>
 									<li class="contact__item">
 										<span class="contact__item-label">Email: </span>
-										<a href="mailto:themesupport@gmail.com">themesupport@gmail.com</a>
+										<a href="mailto:info@royenix.com">info@royenix.com</a>
 									</li>
 								</ul>
 
@@ -237,7 +238,7 @@
 
 
 			<!-- Google Map -->
-			<div id="google-map" class="gmap" data-address="Karachi" >
+			<div id="google-map" class="gmap" data-address="Karachi">
 				<iframe
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.684242195084!2d67.03733671534833!3d24.874631784047285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e5e736977c1%3A0x70ed36c8a6891d3a!2sMazar-e-Quaid%2C%20Jinnah&#39;s%20Mausoleum!5e0!3m2!1sen!2s!4v1661343394872!5m2!1sen!2s"
 					width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
