--- a/icons.html
+++ b/icons.html
@@ -117,7 +117,7 @@
 							</ul> <!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
 								<span class="nav__phone-text">Call us:</span>
-								<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
+								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
 							</div>
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
@@ -136,7 +136,7 @@
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
 							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
+							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
