--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 							<!-- Mobile Phone -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
 								<span class="nav__phone-text">Call us:</span>
-								<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
+								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
 							</div>
 
 							<!-- Mobile Email -->
 							<div class="nav__email nav__email--mobile d-lg-none">
 								<span class="nav__email-text">Email us:</span>
-								<a href="mailto:hi@sedona.com" class="nav__email-email">hi@sedona.com</a>
+								<a href="mailto:info@royenix.com" class="nav__email-email">info@royenix.com</a>
 							</div>
 
 							<!-- Mobile Socials -->
@@ -630,7 +630,8 @@
 
 						<div class="col-lg-7 offset-lg-1">
 							<!-- Google Map -->
-							<div id="google-map" class="gmap" data-address="Karachi" style="position: relative; overflow: hidden;">
+							<div id="google-map" class="gmap" data-address="Karachi"
+								style="position: relative; overflow: hidden;">
 								<iframe
 									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.684242195084!2d67.03733671534833!3d24.874631784047285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e5e736977c1%3A0x70ed36c8a6891d3a!2sMazar-e-Quaid%2C%20Jinnah&#39;s%20Mausoleum!5e0!3m2!1sen!2s!4v1661343394872!5m2!1sen!2s"
 									width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
