--- a/about.html
+++ b/about.html
@@ -388,38 +388,33 @@
 
 			<!-- Partners -->
 			<div class="partners bg-light text-center">
+				<div class="intro text-center">
+					<h3 class="mb-32">Ours Partners in Transportation Business</h3>
+				</div>
+
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-2">
+						<div class="col-sm-3">
 							<a href="#">
 								<img src="img/partners/1.png" alt="">
 							</a>
 						</div>
-						<div class="col-sm-2">
+						<div class="col-sm-3">
 							<a href="#">
 								<img src="img/partners/2.png" alt="">
 							</a>
 						</div>
-						<div class="col-sm-2">
+						<div class="col-sm-3">
 							<a href="#">
 								<img src="img/partners/3.png" alt="">
 							</a>
 						</div>
-						<div class="col-sm-2">
+						<div class="col-sm-3">
 							<a href="#">
 								<img src="img/partners/4.png" alt="">
 							</a>
 						</div>
-						<div class="col-sm-2">
-							<a href="#">
-								<img src="img/partners/5.png" alt="">
-							</a>
-						</div>
-						<div class="col-sm-2">
-							<a href="#">
-								<img src="img/partners/6.png" alt="">
-							</a>
-						</div>
+
 					</div>
 				</div>
 			</div>
