--- a/about.html
+++ b/about.html
@@ -389,7 +389,7 @@
 			<!-- Partners -->
 			<div class="partners bg-light text-center">
 				<div class="intro text-center">
-					<h3 class="mb-32">Ours Partners in Transportation Business</h3>
+					<h3 class="mb-32">Our Partners in Transportation Business</h3>
 				</div>
 
 				<div class="container">
