--- a/single-service.html
+++ b/single-service.html
@@ -272,8 +272,8 @@
 							<div class="col-lg-6">
 								<!-- QID Expiry -->
 								<div class="material__form-group form-group">
-									<input type="date" name="qid-expiry" id="qid-expiry" class="form-input material__input"
-										required="">
+									<input type="date" name="qid-expiry" id="qid-expiry"
+										class="form-input material__input" required="">
 									<label for="qid-expiry" class="material__label" style="top: -20px;">QID Expiry
 										<abbr title="required" class="required">*</abbr>
 									</label>
@@ -283,9 +283,10 @@
 							<div class="col-lg-6">
 								<!-- Driving License Expiry -->
 								<div class="material__form-group form-group">
-									<input type="date"  name="driving-license-exp" id="driving-license-exp" class="form-input material__input"
-										required="">
-									<label for="driving-license-exp" class="material__label" style="top: -20px;">Driving License Expiry
+									<input type="date" name="driving-license-exp" id="driving-license-exp"
+										class="form-input material__input" required="">
+									<label for="driving-license-exp" class="material__label" style="top: -20px;">Driving
+										License Expiry
 										<abbr title="required" class="required">*</abbr>
 									</label>
 									<span class="material__underline"></span>
@@ -299,80 +300,80 @@
 							id="submit-message">
 						<div id="msg" class="message"></div>
 					</form>
-					</>
 				</div>
+			</div>
 
 
-				<!-- Footer -->
-				<footer class="footer bg-dark-overlay" style="background-image: url(img/footer/1.jpg);">
-					<div class="container-fluid">
-						<div class="footer__widgets">
-							<div class="row">
+			<!-- Footer -->
+			<footer class="footer bg-dark-overlay" style="background-image: url(img/footer/1.jpg);">
+				<div class="container-fluid">
+					<div class="footer__widgets">
+						<div class="row">
 
-								<div class="col-lg-3 col-md-3">
-									<div class="widget widget-about-us">
-										<!-- Logo -->
-										<a href="index.html" class="logo-container flex-child">
-											<img class="logo" src="img/logo_white.png"
-												srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
-										</a>
-									</div>
-								</div> <!-- end logo -->
-
-								<div class="col-lg-2 col-md-3">
-									<div class="widget widget_nav_menu">
-										<ul>
-											<li><a href="#">About</a></li>
-											<li><a href="#">Services</a></li>
-											<li><a href="#">Blog</a></li>
-											<li><a href="#">Contact</a></li>
-										</ul>
-									</div>
+							<div class="col-lg-3 col-md-3">
+								<div class="widget widget-about-us">
+									<!-- Logo -->
+									<a href="index.html" class="logo-container flex-child">
+										<img class="logo" src="img/logo_white.png"
+											srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
+									</a>
 								</div>
+							</div> <!-- end logo -->
 
-								<div class="col-lg-2 col-md-3">
-									<div class="widget widget_nav_menu">
-										<ul>
-											<li><a href="#">Privacy Policy</a></li>
-											<li><a href="#">Terms &amp; Conditions</a></li>
-											<li><a href="#">Career</a></li>
-										</ul>
-									</div>
+							<div class="col-lg-2 col-md-3">
+								<div class="widget widget_nav_menu">
+									<ul>
+										<li><a href="#">About</a></li>
+										<li><a href="#">Services</a></li>
+										<li><a href="#">Blog</a></li>
+										<li><a href="#">Contact</a></li>
+									</ul>
 								</div>
-
-								<div class="col-lg-3 offset-lg-2 col-md-3">
-									<div class="widget">
-										<div class="socials">
-											<a href="#" class="social social-twitter" aria-label="twitter"
-												title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-											<a href="#" class="social social-facebook" aria-label="facebook"
-												title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-											<a href="#" class="social social-youtube" aria-label="youtube"
-												title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-											<a href="#" class="social social-instagram" aria-label="instagram"
-												title="instagram" target="_blank"><i class="ui-instagram"></i></a>
-										</div>
-									</div>
-								</div>
-
 							</div>
+
+							<div class="col-lg-2 col-md-3">
+								<div class="widget widget_nav_menu">
+									<ul>
+										<li><a href="#">Privacy Policy</a></li>
+										<li><a href="#">Terms &amp; Conditions</a></li>
+										<li><a href="#">Career</a></li>
+									</ul>
+								</div>
+							</div>
+
+							<div class="col-lg-3 offset-lg-2 col-md-3">
+								<div class="widget">
+									<div class="socials">
+										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+											target="_blank"><i class="ui-twitter"></i></a>
+										<a href="#" class="social social-facebook" aria-label="facebook"
+											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
+										<a href="#" class="social social-youtube" aria-label="youtube"
+											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
+										<a href="#" class="social social-instagram" aria-label="instagram"
+											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+									</div>
+								</div>
+							</div>
+
 						</div>
-					</div> <!-- end container -->
+					</div>
+				</div> <!-- end container -->
 
-					<div class="footer__bottom">
-						<div class="container-fluid text-right text-md-center">
-							<span class="copyright">
-								© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
-							</span>
-						</div>
-					</div> <!-- end footer bottom -->
-				</footer> <!-- end footer -->
+				<div class="footer__bottom">
+					<div class="container-fluid text-right text-md-center">
+						<span class="copyright">
+							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
+						</span>
+					</div>
+				</div> <!-- end footer bottom -->
+			</footer> <!-- end footer -->
 
-				<div id="back-to-top">
-					<a href="#top"><i class="ui-arrow-up"></i></a>
-				</div>
+			<div id="back-to-top">
+				<a href="#top"><i class="ui-arrow-up"></i></a>
+			</div>
 
-			</div> <!-- end content wrapper -->
+		</div> <!-- end content wrapper -->
 	</main> <!-- end main wrapper -->
 
 
