--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,8 @@
 									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
 										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
-										<li><a href="./portfolio.html">Portfolio</a></li>
-										<li><a href="./services.html">Services</a></li>
+										<!-- <li><a href="./portfolio.html">Portfolio</a></li> -->
+										<li><a href="./scaffolding.html">Scaffolding</a></li>
 										<li><a href="./single-service.html">Single Service</a></li>
 
 									</ul>
@@ -83,7 +83,11 @@
 								<li class="active">
 									<a href="#" aria-haspopup="true">Contact Us</a>
 								</li>
+
+
+
 							</ul>
+							
 							<!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
 								<span class="nav__phone-text">Call us:</span>
