--- a/scaffolding.html
+++ b/scaffolding.html
@@ -74,8 +74,8 @@
 									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
 										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
-										<li><a href="./portfolio.html">Portfolio</a></li>
-										<li><a href="./services.html">Services</a></li>
+										<!-- <li><a href="./portfolio.html">Portfolio</a></li> -->
+										<li><a href="./scaffolding.html">Scaffolding</a></li>
 										<li><a href="./single-service.html">Single Service</a></li>
 
 									</ul>
@@ -136,8 +136,10 @@
 				style="background-image: url(img/page-title/services.jpg);">
 				<div class="container">
 					<div class="page-title__holder">
-						<h1 class="page-title__title">Services</h1>
-						<p class="page-title__subtitle">For each project we establish relationships with partners</p>
+						<h1 class="page-title__title">Scaffolding</h1>
+						<p class="page-title__subtitle">For each project we establish relationships with partners
+							For the ordinary and the extraordinary scaffolding challenges, Royenix is the right choice.
+						</p>
 					</div>
 				</div>
 			</section> <!-- end page title -->
@@ -149,13 +151,13 @@
 						<div class="col-lg-10">
 							<div class="intro text-center">
 								<h2 class="mb-32">We turn ideas into works of art.</h2>
-								<p class="lead">For each project we establish relationships with partners who we know
-									will help us create added value for your project.
-									As well as bringing together the public and private sectors, we make
-									sector-overarching links to gather knowledge and to
-									learn from each other. The way we undertake projects is based on permanently
-									applying values that reinforce each other: socio-cultural
-									value, experiental value, building-technical value and economical value.</p>
+								<p class="lead">We believes that our competitors cannot match in terms of customer
+									service, quality of scaffolding services and exceptional scaffolding knowledge and
+									expertise. We bring a reputation for integrity and fairness not only in our everyday
+									business relationship with our clients but also with our management and staff.
+									Royenix have the experience and capabilities to provide high quality and cost
+									effective scaffolding service at a competitive rate. All scaffolding is erected
+									safely, securely and efficiently.</p>
 							</div>
 						</div>
 					</div>
@@ -173,9 +175,9 @@
 									<img src="img/services/v-2/1.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
-									<h3 class="service-1__title">Planning</h3>
-									<p>We are a full service that offers design and build services for your entire
-										project from initial sketches to the final construction.</p>
+									<h3 class="service-1__title">TOP QUALITY</h3>
+									<p>Our products are specifically engineered and manufactured to provide solid
+										support, superior durability and versatile application.</p>
 								</div>
 							</div>
 						</div>
@@ -185,9 +187,10 @@
 									<img src="img/services/v-2/2.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
-									<h3 class="service-1__title">Interior Design</h3>
-									<p>We are a full service that offers design and build services for your entire
-										project from initial sketches to the final construction.</p>
+									<h3 class="service-1__title">BRAND REPUTATION</h3>
+									<p>Through the years, we have built a reputation for providing high-quality and
+										affordable aluminium scaffold equipment, making us one the foremost scaffolding
+										companies.</p>
 								</div>
 							</div>
 						</div>
@@ -197,9 +200,10 @@
 									<img src="img/services/v-2/3.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
-									<h3 class="service-1__title">Exterior Design</h3>
-									<p>We are a full service that offers design and build services for your entire
-										project from initial sketches to the final construction.</p>
+									<h3 class="service-1__title">DURABLE SCAFFOLDS</h3>
+									<p>If your business requires high-quality and durable scaffolds, planks, and
+										ladders, then you can count on Al Mateen, one of the most trusted aluminium
+										scaffolding equipment suppliers.</p>
 								</div>
 							</div>
 						</div>
@@ -209,9 +213,9 @@
 									<img src="img/services/v-2/4.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
-									<h3 class="service-1__title">Restoration</h3>
-									<p>We are a full service that offers design and build services for your entire
-										project from initial sketches to the final construction.</p>
+									<h3 class="service-1__title">HANDLE EVERY SCAFFOLDING</h3>
+									<p>Royenix partners benefit from a comprehensive range of scaffolding systems
+										solutions to handle every scaffolding task no matter how unique or complex.</p>
 								</div>
 							</div>
 						</div>
