--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 								<li>
 									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
 								</li>
-	<div id="google_translate_element"></div>
-								
+								<div id="google_translate_element"></div>
+
 							</ul>
 							<!-- end menu -->
-							
+
 
 							<!-- Mobile Search -->
 							<!-- <div class="nav__search-mobile d-lg-none">
@@ -582,7 +582,7 @@
 							<div class="title-row">
 								<p class="subtitle">Contact</p>
 								<h2 class="section-title">Get in Touch</h2>
-								<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit</p>
+								<p>If you have any question about project cost, get in touch.</p>
 							</div>
 
 							<!-- Contact Form -->
@@ -636,7 +636,7 @@
 							<div id="google-map" class="gmap" data-address="Karachi"
 								style="position: relative; overflow: hidden;">
 								<iframe
-									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.684242195084!2d67.03733671534833!3d24.874631784047285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e5e736977c1%3A0x70ed36c8a6891d3a!2sMazar-e-Quaid%2C%20Jinnah&#39;s%20Mausoleum!5e0!3m2!1sen!2s!4v1661343394872!5m2!1sen!2s"
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.576441817953!2d51.49931566535548!3d25.28482998385548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e45dadb2c009dc9%3A0xa5ad38798eaa1476!2sRetaj%20Building%2C%20Doha%2C%20Qatar!5e0!3m2!1sen!2s!4v1661421429186!5m2!1sen!2s"
 									width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
 									referrerpolicy="no-referrer-when-downgrade"></iframe>
 							</div>
