--- a/scaffolding.html
+++ b/scaffolding.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Royenix | Services</title>
+	<title>Royenix | Scaffolding</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -133,7 +133,7 @@
 
 			<!-- Page Title -->
 			<section class="page-title bg-dark-overlay text-center"
-				style="background-image: url(img/page-title/services.jpg);">
+				style="background-image: url(img/page-title/services2.jpg);">
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Scaffolding</h1>
@@ -168,11 +168,11 @@
 			<!-- Services -->
 			<section class="section-wrap pt-0 pb-0">
 				<div class="container">
-					<div class="row">
-						<div class="col-xl-4 col-lg-6">
+					<div class="row justify-content-around">
+						<div class="col-xl-5 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
-									<img src="img/services/v-2/1.jpg" class="service-1__img" alt="">
+									<img src="img/services/v-2/1.1.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">TOP QUALITY</h3>
@@ -181,10 +181,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4 col-lg-6">
+						<div class="col-xl-5 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
-									<img src="img/services/v-2/2.jpg" class="service-1__img" alt="">
+									<img src="img/services/v-2/1.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">BRAND REPUTATION</h3>
@@ -194,7 +194,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4 col-lg-6">
+					</div>
+					<div class="row justify-content-around">
+						<div class="col-xl-5 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
 									<img src="img/services/v-2/3.jpg" class="service-1__img" alt="">
@@ -207,7 +209,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4 col-lg-6">
+						<div class="col-xl-5 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
 									<img src="img/services/v-2/4.jpg" class="service-1__img" alt="">
@@ -216,30 +218,6 @@
 									<h3 class="service-1__title">HANDLE EVERY SCAFFOLDING</h3>
 									<p>Royenix partners benefit from a comprehensive range of scaffolding systems
 										solutions to handle every scaffolding task no matter how unique or complex.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-4 col-lg-6">
-							<div class="service-1">
-								<a href="#" class="service-1__url hover-scale">
-									<img src="img/services/v-2/5.jpg" class="service-1__img" alt="">
-								</a>
-								<div class="service-1__info">
-									<h3 class="service-1__title">Building Design</h3>
-									<p>We are a full service that offers design and build services for your entire
-										project from initial sketches to the final construction.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-4 col-lg-6">
-							<div class="service-1">
-								<a href="#" class="service-1__url hover-scale">
-									<img src="img/services/v-2/6.jpg" class="service-1__img" alt="">
-								</a>
-								<div class="service-1__info">
-									<h3 class="service-1__title">Consultation</h3>
-									<p>We are a full service that offers design and build services for your entire
-										project from initial sketches to the final construction.</p>
 								</div>
 							</div>
 						</div>
@@ -288,8 +266,42 @@
 			</section> <!-- end process -->
 
 
+			<br>
+			<!-- Statistic -->
+			<div class="container">
+				<div class="statistic-wrap">
+					<div class="row">
+						<div class="col-md-3">
+							<div class="statistic">
+								<span class="statistic__number">461</span>
+								<h5 class="statistic__title">Sucessful Projects</h5>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="statistic">
+								<span class="statistic__number">290</span>
+								<h5 class="statistic__title">Happy Customers</h5>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="statistic">
+								<span class="statistic__number">45</span>
+								<h5 class="statistic__title">Team Members</h5>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="statistic">
+								<span class="statistic__number">36</span>
+								<h5 class="statistic__title">Awards</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end statistic -->
+			<br>
 			<!-- CTA -->
-			<div class="call-to-action text-center">
+			<!-- <div class="call-to-action text-center">
 				<div class="call-to-action__container">
 					<h3 class="call-to-action__title">
 						We'll help you to build your future.
@@ -298,8 +310,7 @@
 						<span>Let’s Work Together</span>
 					</a>
 				</div>
-			</div>
-
+			</div> -->
 
 			<!-- Footer -->
 			<footer class="footer bg-dark-overlay" style="background-image: url(img/footer/1.jpg);">
