--- a/about.html
+++ b/about.html
@@ -273,7 +273,8 @@
 						</div>
 					</div>
 				</div>
-			</div> <!-- end statistic -->
+			</div> 
+			<!-- end statistic -->
 
 			<!-- Team -->
 			<section class="section-wrap">
