--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Royenix">
 	<meta property="og:description" content="Contracting and Transporting">
-	<meta property="og:image" content="./img/Main.jpeg">
+	<meta property="og:image" content="./img/logo.png">
 	<meta name="author" content="M Saim Raza">
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Barlow:400,600%7COpen+Sans:400,400i,700' rel='stylesheet'>
