--- a/single-service.html
+++ b/single-service.html
@@ -217,7 +217,7 @@
 						<span>Let’s Work Together</span>
 					</a>
 				</div>
-				</div>
+				<!-- Form Modal -->
 				<div class="modal fade" id="myModal">
 					<div class="modal-dialog modal-lg modal-dialog-centered text-center">
 						<div class="modal-content" style="background-color: #f9f9f9">
@@ -322,13 +322,8 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="col-lg-7 offset-lg-2 text-center">
-					<h2 class="section-title">Join Us</h2>
-					<p class="mb-40">You are few more steps away from Registration.</p>
 
-					
-				</div> -->
-			<!-- </div> -->
+			</div>
 
 
 			<!-- Footer -->
