--- a/about.html
+++ b/about.html
@@ -7,7 +7,12 @@
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="description" content="">
+	<meta name="description" content="Contracting and Transporting">
+	<meta property="og:url" content="https://royenix.com">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Royenix">
+	<meta property="og:description" content="Contracting and Transporting">
+	<meta property="og:image" content="./img/logo.png">
 
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Barlow:400,600%7COpen+Sans:400,400i,700' rel='stylesheet'>
@@ -273,7 +278,7 @@
 						</div>
 					</div>
 				</div>
-			</div> 
+			</div>
 			<!-- end statistic -->
 
 			<!-- Team -->
