--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="description" content="">
+	<meta name="description" content="Contracting and Transporting">
 	<meta property="og:url" content="https://royenix.com">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Royenix">
