--- a/about.html
+++ b/about.html
@@ -398,8 +398,8 @@
 					<h3 class="mb-32">Our Partners in Transportation Business</h3>
 				</div>
 
-				<div class="container">
-					<div class="row">
+				<div class="container slider autoplay ">
+					<div class="row slider autoplay">
 						<div class="col-sm-3">
 							<a href="#">
 								<img src="img/partners/1.png" alt="">
